<resources>
    <string name="app_name">ApplicationMeteo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list">listActivity</string>
    <string name="libelle">Libellé</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="favoriteStation">Station favorite :</string>
    <string name="expand">></string>

    <string name="dateReleve">Date du relevé</string>
    <string name="temperatureOne">Température 1</string>
    <string name="temperatureTwo">Température 2</string>
    <string name="pressure">Pression</string>

    <string name="displayListButton">Afficher la liste des stations</string>
    <string name="setFavoriteButton">Définir comme favorite</string>
    <string name="title_activity_item_list">itemListActivity</string>
    <string name="title_activity_station_detail">stationDetailActivity</string>
    <string name="title_activity_detail">detailActivity</string>
    <string name="title_activity_releve">releveActivity</string>
    <string name="title_activity_item_releve">itemReleveActivity</string>
    <string name="title_activity_releve2">releve2Activity</string>
</resources>
