<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="horizontal"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.sylvain.applicationmeteo.stationDetailActivity"
    android:id="@+id/detailStaio">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/libelle"
        android:id="@+id/detailLibelleStation"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="297dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/inputLibelle"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/detailLibelleStation"
        android:layout_marginStart="207dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/latitude"
        android:id="@+id/detailLatitudeLibelle"
        android:layout_below="@+id/detailLibelleStation"
        android:layout_alignStart="@+id/detailLibelleStation"
        android:layout_marginTop="43dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/inputLatitude"
        android:layout_alignTop="@+id/detailLatitudeLibelle"
        android:layout_alignStart="@+id/inputLibelle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/longitude"
        android:id="@+id/detailLongitudeStation"
        android:layout_below="@+id/detailLatitudeLibelle"
        android:layout_alignStart="@+id/detailLatitudeLibelle"
        android:layout_marginTop="51dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/inputLongitude"
        android:layout_alignTop="@+id/detailLongitudeStation"
        android:layout_alignStart="@+id/inputLatitude" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/altitude"
        android:id="@+id/detailAltitudeStation"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/detailLongitudeStation"
        android:layout_alignStart="@+id/detailLongitudeStation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/inputAltitude"
        android:layout_alignTop="@+id/detailAltitudeStation"
        android:layout_alignStart="@+id/inputLongitude" />

</RelativeLayout>
