<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="horizontal"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:measureWithLargestChild="false"
    android:longClickable="false"
    android:nestedScrollingEnabled="false"
    android:transitionGroup="false"
    android:id="@+id/jeSaisPas"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="titreStation"
                android:id="@+id/titreStation" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="33dp"
                android:weightSum="1"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/libelle"
                    android:id="@+id/libelleStation"
                    android:layout_weight="0.12" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="textLibelleStation"
                    android:id="@+id/textLibelleStation"
                    android:phoneNumber="true" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="166dp"
                    android:layout_height="32dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/latitude"
                    android:id="@+id/detailLongitudeStation" />

                <TextView
                    android:layout_width="182dp"
                    android:layout_height="35dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="textLatitudeStation"
                    android:id="@+id/textLatitudeStation" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="166dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/longitude"
                    android:id="@+id/detailLongitudeStation" />

                <TextView
                    android:layout_width="182dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="textLongitudeStation"
                    android:id="@+id/textLongitudeStation" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="166dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/altitude"
                    android:id="@+id/textView"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="166dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="textAltitudeStation"
                    android:id="@+id/textAltitudeStation"
                    android:gravity="center_horizontal" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vers les derniers releves"
            android:id="@+id/button"
            android:onClick="goToReleve" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vers la liste des stations"
            android:id="@+id/button2"
            android:onClick="goToList" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/displayListButton"
            android:id="@+id/buttonStationList"
            android:layout_gravity="center_horizontal"
            android:onClick="goToList"
            android:longClickable="false" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Station favorite :"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/favoriteStation" />

</LinearLayout>
